[metadata]
name = ann
version = 0.1.0
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = Anime New Network client
home-page = https://github.com/lad1337/ann-py
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries
